increasing font size to fix contrast ratio

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -181,6 +181,9 @@ svg{
     border-radius: 12px;
     padding: 8px;
 }
+#cta {
+    font-size: 14pt;
+}
 #cta a{
     margin-top: 12px;
     margin-left: 8px;
